tests/frontend/pass/negative-literals.act
contract C

constructor
interface constructor()

creates

    int totalSupply := -1
