tests/frontend/fail/emptystorage/var.act
contract LValue

constructor
interface constructor()

creates

    uint x := x
    
invariants

    x == 0
